add new methods filters of stocks